# tfhe-rs-examples

./: README.md
adder64/: Cargo.toml
adder64/src/: main.rs
aes_128/: Cargo.toml
aes_128/src/: main.rs
aes_128_fbs/: aes_128_2_basic.fbs  aes_128_2_search.fbs  aes_128_6_search.fbs  aes_128_mand_2_search.fbs  aes_128_mand_6_search.fbs
aes_128_threads/: Cargo.toml  aes_128_mand.txt
aes_128_threads/src/: main.rs
