[package]
name = "aes_128_threads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "*", features = ["boolean", "aarch64-unix"] }
aes="0.8.2"
bit-vec="0.6.3"
rayon = "1.7"
num_cpus = "1.15.0"
